--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+hypercorn[h2]==0.15.0
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
@@ -12,4 +13,9 @@ pydantic-settings==2.1.0
 markdown2==2.4.10
 Jinja2==3.1.2
 websockets==12.0
-h2==4.1.0 
+h2==4.1.0
+uvloop>=0.17.0
+httptools>=0.6.0
+watchdog==3.0.0
+PyPDF2==3.0.1
+python-magic==0.4.27
