--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "@types/lodash-es": "^4.17.12",
     "@vueuse/core": "^12.3.0",
     "axios": "^1.6.2",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "marked": "^11.0.0",
+    "pdfium-wasm": "^0.0.2",
     "pdfjs-dist": "^4.10.38",
     "pinia": "^2.3.0",
     "prismjs": "^1.29.0",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.14",
     "@types/prismjs": "^1.26.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
