--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "lodash-es": "^4.17.21",
     "marked": "^11.0.0",
     "pdfium-wasm": "^0.0.2",
-    "pdfjs-dist": "^4.10.38",
+    "pdfjs-dist": "3.11.174",
     "pinia": "^2.3.0",
     "prismjs": "^1.29.0",
     "vue": "^3.5.13",
