--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,4 +8,8 @@ pydantic==2.5.2
 aiofiles==23.2.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-watchdog==3.0.0 
+watchdog==3.0.0
+psutil==5.9.6
+PyPDF2==3.0.1
+python-magic==0.4.27
+hypercorn==0.15.0 
