--- a/client/package.json
+++ b/client/package.json
@@ -36,9 +36,12 @@
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.39.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^2.2.0"
   }
 }
