--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@vueuse/core": "^12.3.0",
     "axios": "^1.6.2",
     "gsap": "^3.12.7",
+    "highlight.js": "^11.11.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "marked": "^11.0.0",
