--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/gsap": "^1.20.2",
     "@types/lodash": "^4.17.14",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.10",
     "@types/prismjs": "^1.26.5",
     "@vitejs/plugin-vue": "^5.2.1",
